- Rename the filter in the News page from News to Groups - Fix the truncated bubbles content in the chat

--- a/themes/material/css/list.css
+++ b/themes/material/css/list.css
@@ -142,6 +142,10 @@ ul li span {
     white-space: nowrap;
 }
 
+ul li div.bubble span {
+    white-space: initial;
+}
+
 ul li span.second {
     opacity: 0.6;
     padding-left: 0.5rem;
